Release v0.12.0
Merge validated development release.
